--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
     --cinza:#c0c0c0;
     --botao:#167bf7;
     --background-color:#00030c;
+    --fonte-principal:'Inter';
 }
 body{
     background-color:var(--background);
-    color: var(--branco)
+    color: var(--branco);
+    font-family: var(--fonte-principal);
 }
 *{
     margin: 0;
