--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
     background-color: var(--background-color);
     color: var(--branco);
     font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 *{
     margin: 0;
@@ -35,9 +37,15 @@ body{
     padding: 1em;
     color: var(--branco);
     display: block;
+    text-decoration: none;
 }
 
 .botao_secundario{
     background-color: transparent;
     border: 2px solid var(--branco);
+}
+
+.container_aviso{
+    font-size: 12px;
+    color: var(--cinza);
 }
