--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     color: var(--branco);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 
 .botao_secundario{
@@ -54,4 +55,12 @@ body{
     font-size: 28px;
     font-weight: 700;
 
+}
+
+.container_imagem{
+    margin: 1em 0 2em 0;
+}
+
+.container_caixa{
+    margin: 0 6em;
 }
