--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ body{
 .container_caixa{
     margin: 0 6em;
 }
+
+.secundario_imagem{
+    width: 80%;
+}
+
+.secunddario{
+    align-items: center;
+}
