--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ body{
 .descricao_titulo{
     font-weight: 700;
     font-size: 48px;
-    color: var(--branco)
+    color: var(--branco);
+    margin-bottom: 0.3em;
 }
 
+.descricao_texto{
+    color: var(--cinza);
+}
