--- a/style.css
+++ b/style.css
@@ -78,13 +78,15 @@ body{
     font-weight: 700;
     font-size: 48px;
     color: var(--branco);
-    margin-bottom: 0.3em;
+    margin-bottom: 0.01em;
 }
 
 .descricao_texto{
     color: var(--cinza);
+    font-size: 16px;
 }
 
 .container_descricao{
     padding: 2em;
 }
+
