--- a/style.css
+++ b/style.css
@@ -1,26 +1,27 @@
 :root{
-    --branco:#ffffff;
-    --cinza:#c0c0c0;
-    --botao:#167bf7;
-    --background-color:#00030C;
-    --fonte-principal:'Inter';
+    --branco: #FFFFFF;
+    --cinza: #C0C0C0;
+    --botao: #0e2c40;
+    --background: #00030C; 
+    --fonte-principal: 'Inter';
 }
+
 body{
-    background-color: var(--background-color);
+    background-color: var(--background);
     color: var(--branco);
     font-family: var(--fonte-principal);
-    font-size: 16px;
     font-weight: 400;
 }
+
 *{
     margin: 0;
     padding: 0;
 }
 
 .principal{
-    background-image: url(img/Background.png) ;
-    background-repeat:no-repeat;
-    background-size:contain;
+    background-image: url(img/Background.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     align-items: center;
     text-align: center;
 }
@@ -31,17 +32,18 @@ body{
     grid-template-columns: 50% 50%;
 }
 
-.container_botao{
+.containerbotao{
     background-color: var(--botao);
     border-radius: 5px;
     padding: 1em;
     color: var(--branco);
+    box-shadow: 4px 4px var(--sombra);
     display: block;
     text-decoration: none;
     margin-bottom: 1em;
 }
 
-.botao_secundario{
+.botaosecundario{
     background-color: transparent;
     border: 2px solid var(--branco);
 }
@@ -49,23 +51,24 @@ body{
 .container_aviso{
     font-size: 12px;
     color: var(--cinza);
+
 }
 
 .container_titulo{
     font-size: 28px;
     font-weight: 700;
-
 }
 
-.container_imagem{
+.containerimg{
     margin: 1em 0 2em 0;
 }
 
 .container_caixa{
     margin: 0 6em;
+
 }
 
-.secundario_imagem{
+.secundario_img{
     width: 80%;
 }
 
@@ -78,7 +81,7 @@ body{
     font-weight: 700;
     font-size: 48px;
     color: var(--branco);
-    margin-bottom: 0.01em;
+    margin-bottom: 0.1em;
 }
 
 .descricao_texto{
@@ -86,7 +89,65 @@ body{
     font-size: 16px;
 }
 
+.secundario_botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
 .container_descricao{
     padding: 2em;
 }
 
+.notebook{
+    width: 90%;
+}
+
+.dispositivos_lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+    
+}
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivos_titulo{
+    font-size: 48px;
+    color: var(--branco);
+}
+
+.lista-item{
+    font-size: 32px;
+    color: var(--branco);
+}
+
+.rodape_lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista_link a{
+    text-decoration: none;
+    color: var(--branco);
+    margin-left: 1em;
+}
+
+.rodape_texto{
+    margin: 1em 0;
+    color: var(--cinza);
+    font-size: 14px;
+}
+
+.rodape{
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.rodape_logo{
+    margin-bottom: 2em;
+}
