--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --botao: #0e2c40;
     --background: #00030C; 
     --fonte-principal: 'Inter';
+    --efeitobotao:#279300;
 }
 
 body{
@@ -150,4 +151,9 @@ body{
 
 .rodape_logo{
     margin-bottom: 2em;
+}
+
+.containerbotao:hover{
+    background-color: var(--efeitobotao);
+    color: var(--background);
 }
