--- a/style.css
+++ b/style.css
@@ -157,3 +157,8 @@ body{
     background-color: var(--efeitobotao);
     color: var(--background);
 }
+
+
+.led_img{
+    filter: drop-shadow(0 0 0.4em hsl(97, 100%, 74%));
+}
